src/objects/Manual_Vendor_Credits_Debits__c.object
<CustomObject>
    <fields>
        <fullName>Amt_After_GST__c</fullName>
        <label>Amount After GST</label>
        <precision>11</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>[JA 2/12] D-1971. Lookup to Case will replace the lookup field towards User object named &quot;Case_DEL__c&quot;.
[KH 5/29] UD1292. Removed look-up filter.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Manual Vendor Credits/ Debits</relationshipLabel>
        <relationshipName>Manual_Vendor_Credits_Debits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Debit_Indicator__c</fullName>
        <label>Credit / Debit Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Debit_Note_Number__c</fullName>
        <label>Credit / Debit Note Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Debit_Vendor_Reason__c</fullName>
        <inlineHelpText>Reason Type - Description

01 - PREPAID PAPER COST-NON- DEL

02 - PREPAID DEL FEE-NON-DEL

03 - SUB PAPER FEE FOR VEN

04 - SUB DELIVERY FEE FOR VEN

D3 - PREPAID PAPER COST-NON- DEL</inlineHelpText>
        <label>Credit/Debit Vendor Reason</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Manual Vendor Credits/ Debits</relationshipLabel>
        <relationshipName>Manual_Vendor_Credits_Debits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>there will be a “Status” picklist on the Manual Vendor Debit/Credit object with values like “Draft, Approved, Rejected etc.” which will be manually updated by the CSO based on the approval result that has happened outside of the CRSM system. No automated approval process will be done in Salesforce.com as all approvals will happen outside of SFDC and status will be manually updated by the CSO in the system.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Manual Vendor Credits/ Debits</relationshipLabel>
        <relationshipName>Manual_Vendor_Credits_Debits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manual Vendor Credits/ Debits</relationshipLabel>
        <relationshipName>Manual_Vendor_Credits_Debits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Manual Vendor Credits/ Debits</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>Publication__c</columns>
        <columns>Approval_Date__c</columns>
        <columns>Case__c</columns>
        <columns>Amt_After_GST__c</columns>
        <columns>Status__c</columns>
        <columns>Credit_Debit_Indicator__c</columns>
        <columns>Credit_Debit_Note_Number__c</columns>
        <columns>Credit_Debit_Vendor_Reason__c</columns>
        <columns>From_Date__c</columns>
        <columns>To_Date__c</columns>
        <columns>Job_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>12/29/2015 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Test-{0000}</displayFormat>
        <label>Manual Vendor Credits/ Debits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Vendor Credits/ Debits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CreditDebit_Indicator_is_blank</fullName>
        <active>true</active>
        <description>Credit/Debit Indicator cannot be blank</description>
        <errorConditionFormula>ISBLANK( TEXT( Credit_Debit_Indicator__c ) )</errorConditionFormula>
        <errorMessage>Credit/Debit Indicator cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CreditDebit_Vendor_Reason_is_blank</fullName>
        <active>true</active>
        <description>Credit/Debit Vendor Reason cannot be blank</description>
        <errorConditionFormula>ISBLANK( TEXT( Credit_Debit_Vendor_Reason__c ) )</errorConditionFormula>
        <errorMessage>Credit/Debit Vendor Reason cannot be blank.</errorMessage>
    </validationRules>
</CustomObject>